--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
     <title>Love Running</title>
 </head>
 <body>
-    
+    <header>Header content</header>
+    <section>
+        Main image
+    </section>
+    <section>
+        Club ethos
+    </section>
+    <section>
+        Running locations, distances and times
+    </section>
+    <footer>
+        Social links here
+    </footer>
 </body>
-<h1>Hello World!</h1>
+<h1>Love Running</h1>
 </html>
