--- a/gallery.html
+++ b/gallery.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Love Running for runners in Dublin, Ireland">
     <meta name="keywords" content="love running, running club, ireland, dublin">
 
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
     <title>Love Running</title>
 </head>
 
