--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <meta name="description" content="Love Running for runners in Dublin, Ireland">
     <meta name="keywords" content="love running, running club, ireland, dublin">
 
-    <link rel="stylesheet" href="assets/css/style.css">
+    <!-- stylesheet -->
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
     <title>Love Running</title>
+
 </head>
 
 <body>
@@ -26,7 +28,7 @@
                     <a href="gallery.html">Gallery</a>
                 </li>
                 <li>
-                    <a href="index.html" class="active">Home</a>
+                    <a class="active"> href="index.html">Home</a>
                 </li>
             </ul>
         </nav>
