--- a/signup.html
+++ b/signup.html
@@ -34,7 +34,7 @@
     </header>
     <section class="form-section">
         <form method="POST" action="https://formdump.codeinstitute.net/" class="signup-form">
-            <h2><i class="fas fa-heartbeat"></i>Let's get you signed up!</h2>
+            <h2><i class="fa-solid fa-heart-pulse"></i>Let's get you signed up!</h2>
             <label for="fname">First Name</label>
             <input class="text-input" id="fname" name="first_name" type="text" required>
             
