--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a href="gallery.html">Gallery</a>
                 </li>
                 <li>
-                    <a class="active"> href="index.html">Home</a>
+                    <a href="index.html" class="active">Home</a>
                 </li>
             </ul>
         </nav>
