--- a/signup.html
+++ b/signup.html
@@ -9,7 +9,7 @@
     <title>Love Running</title>
 
     <!-- Stylesheet -->
-    <link href="index.css" rel="stylesheet" type="text/css" />
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css" />
 </head>
 
 <body>
@@ -20,7 +20,7 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a class="active" href="signup.html">Sign Up</a>
+                    <a href="signup.html" class="active">Sign Up</a>
                 </li>
                 <li>
                     <a href="gallery.html">Gallery</a>
